# -multiit

./: CMakeLists.txt  README.md
doc/multiit_design/: beamerthemeunil.sty  multiit_design.tex
doc/multiit_design/figures/: combinations.odg  combinations.odp
include/: multiit.h
include/detail/: compiletime.h  runtime.h
include/multiit/: multiit.h
src/example/: multiit_example.cpp
src/python/: multiit_python.cpp
src/test/: multiit_test.cpp
